# algorithmic-trading-template

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  backtest.py  config.py  logging_utils.py  main.py
app/broker/: __init__.py  alpaca.py  models.py
app/data/: __init__.py  alpaca_data.py  alpha_vantage.py  base.py  csv_data.py  models.py
app/execution/: __init__.py  trader.py
app/strategy/: __init__.py  _strategy_template.py  base.py  hft_pulse.py  loader.py  sma_crossover.py
app/utils/: errors.py  time.py
src/algotrade/: __init__.py  cli.py  config.py  runtime.py
src/algotrade/brokers/: __init__.py  alpaca_paper.py  backtest_broker.py  base.py
src/algotrade/data/: __init__.py  alpaca_market_data.py  base.py  csv_data.py  yfinance_data.py
src/algotrade/domain/: __init__.py  events.py  models.py
tests/: conftest.py  test_backtest.py  test_backtest_broker.py  test_backtest_diagnostics.py  test_cli.py  test_cli_overrides.py  test_config_cycles.py  test_config_precedence.py  test_config_universe.py  test_csv_data.py  test_csv_data_provider.py  test_execution_engine.py  test_hft_pulse.py  test_runtime_liquidate.py  test_runtime_pnl.py  test_runtime_portfolio.py  test_runtime_reconcile.py  test_runtime_validation.py  test_sma_crossover.py  test_state_store.py  test_strategy_contract.py  test_strategy_loader.py  test_strategy_registry.py  test_strategy_template.py  test_symbol_normalization.py  test_trader_open_orders.py  test_trader_order_logic.py  test_yfinance_data_provider.py
(+24 files in other folders)
