[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "algotrade"
version = "0.1.0"
description = "Minimal, highly-iterable algorithmic trading boilerplate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.8",
]

[project.scripts]
algotrade = "algotrade.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/algotrade"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.6.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
